# LLM-Policy-Stress-Framework

./: README.md  pyproject.toml  requirements.txt
configs/: swarm-config.yaml
decision_robustness/: __init__.py  cli.py
decision_robustness/engine/: __init__.py  events.py  simulator.py  world.py
decision_robustness/examples/: __init__.py
decision_robustness/examples/project_simulator/: __init__.py  decisions.py  policies.py  run_evaluation.py  world_config.py
decision_robustness/metrics/: __init__.py  collapse.py  regret.py  sensitivity.py  survival.py
decision_robustness/output/: __init__.py  diagnostics.py  reporter.py
decision_robustness/policies/: __init__.py  base.py  llm_policy.py  rule_based.py
decision_robustness/swarm/: __init__.py  bootstrap.py  collector.py  executor.py  hivemind_backend.py
docker/: Dockerfile  docker-compose.yaml  install.sh
docker/bootstrap/: Dockerfile
docker/worker/: Dockerfile
docs/: RESEARCH.md
scripts/: install.sh  run_node.py  setup_bootstrap_vps.sh  swarm-gym.service
tests/: test_engine.py  test_metrics.py  test_policies.py  test_swarm.py
