[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "decision-robustness"
version = "0.1.0"
description = "Evaluating AI decisions by how many futures they survive"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "xailong-6969"}
]
keywords = [
    "llm",
    "ai-safety",
    "robustness",
    "decision-policy",
    "stress-testing",
    "simulation"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.21.0",
    "typing-extensions>=4.0.0",
]

[project.optional-dependencies]
llm = [
    "openai>=1.0.0",
    "anthropic>=0.18.0",
]
viz = [
    "rich>=13.0.0",
    "matplotlib>=3.5.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]
all = [
    "decision-robustness[llm,viz,dev]",
]

[project.urls]
Homepage = "https://github.com/xailong-6969/LLM-Policy-Stress-Framework"
Repository = "https://github.com/xailong-6969/LLM-Policy-Stress-Framework"
Issues = "https://github.com/xailong-6969/LLM-Policy-Stress-Framework/issues"

[project.scripts]
decision-robustness = "decision_robustness.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["decision_robustness*"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
